--- a/public/index.html
+++ b/public/index.html
@@ -2380,6 +2380,11 @@
 					</div>
 				</footer>
 			</div>
+			<div class="back-top" id="back-top"><a href="#top">
+					<svg class="icon icon-arrow-up ">
+						<use xlink:href="img/svg/sprite.svg#arrow-up"></use>
+					</svg><span>Наверх</span></a>
+			</div>
 		</div>
 		<!--  start modals--><a class="link-modal-js" href="modal-call">modal-call </a>
 		<div id="modal-call" style="display: none">
