--- a/public/03-portfolio-2.html
+++ b/public/03-portfolio-2.html
@@ -371,6 +371,125 @@
 				</div>
 			</section>
 			<!-- end sSpecifications-->
+			<!-- start sSimilarAwnings-->
+			<section class="sSimilarAwnings section" id="sSimilarAwnings">
+				<div class="container">
+					<div class="section-title text-center">
+						<h2>Похожие навесы</h2>
+					</div>
+					<div class="row">
+						<div class="col-lg-4">
+							<div class="card"><a href="#"> 
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/sProducts-1.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/sProducts-1.webp"/><img class="object-fit-js" src="img/@2x/sProducts-1.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture-->
+									<h4>Навес 4&times;8&nbsp;м из&nbsp;сотового поликарбоната</h4></a>
+								<p>Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м</p>
+								<h5>Характеристики</h5>
+								<table>
+									<tbody>
+										<tr>
+											<td>Тип</td>
+											<td>навесы для дачи</td>
+										</tr>
+										<tr>
+											<td>Тип навеса</td>
+											<td>полуарочный</td>
+										</tr>
+										<tr>
+											<td>Кровля</td>
+											<td>сотовый поликарбонат</td>
+										</tr>
+										<tr>
+											<td>Каркас</td>
+											<td>еталический</td>
+										</tr>
+									</tbody>
+								</table>
+								<div class="card__more">
+									<p>150 400 ₽</p><a class="btn btn-primary btn-sm" href="#">Подробнее </a>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4">
+							<div class="card"><a href="#"> 
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/sProducts-1.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/sProducts-1.webp"/><img class="object-fit-js" src="img/@2x/sProducts-1.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture-->
+									<h4>Навес 4&times;8&nbsp;м из&nbsp;сотового поликарбоната</h4></a>
+								<p>Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м</p>
+								<h5>Характеристики</h5>
+								<table>
+									<tbody>
+										<tr>
+											<td>Тип</td>
+											<td>навесы для дачи</td>
+										</tr>
+										<tr>
+											<td>Тип навеса</td>
+											<td>полуарочный</td>
+										</tr>
+										<tr>
+											<td>Кровля</td>
+											<td>сотовый поликарбонат</td>
+										</tr>
+										<tr>
+											<td>Каркас</td>
+											<td>еталический</td>
+										</tr>
+									</tbody>
+								</table>
+								<div class="card__more">
+									<p>150 400 ₽</p><a class="btn btn-primary btn-sm" href="#">Подробнее </a>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4">
+							<div class="card"><a href="#"> 
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/sProducts-1.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/sProducts-1.webp"/><img class="object-fit-js" src="img/@2x/sProducts-1.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture-->
+									<h4>Навес 4&times;8&nbsp;м из&nbsp;сотового поликарбоната</h4></a>
+								<p>Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м</p>
+								<h5>Характеристики</h5>
+								<table>
+									<tbody>
+										<tr>
+											<td>Тип</td>
+											<td>навесы для дачи</td>
+										</tr>
+										<tr>
+											<td>Тип навеса</td>
+											<td>полуарочный</td>
+										</tr>
+										<tr>
+											<td>Кровля</td>
+											<td>сотовый поликарбонат</td>
+										</tr>
+										<tr>
+											<td>Каркас</td>
+											<td>еталический</td>
+										</tr>
+									</tbody>
+								</table>
+								<div class="card__more">
+									<p>150 400 ₽</p><a class="btn btn-primary btn-sm" href="#">Подробнее </a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- end sSimilarAwnings-->
 			<!-- start sContact-->
 			<section class="sContact section" id="sContact">
 				<div class="container">
