--- a/public/03-portfolio.html
+++ b/public/03-portfolio.html
@@ -506,7 +506,7 @@
 							</div>
 							<div class="row">
 								<div class="col-md-6">
-									<div class="sProducts__card"><a href="#"> 
+									<div class="card"><a href="#"> 
 											<!-- picture-->
 											<picture> 
 												<source type="image/avif" srcset="img/@2x/avif/sProducts-1.avif"/>
@@ -536,13 +536,13 @@
 												</tr>
 											</tbody>
 										</table>
-										<div class="sProducts__more">
+										<div class="card__more">
 											<p>150 400 ₽</p><a class="btn btn-primary btn-sm" href="#">Подробнее </a>
 										</div>
 									</div>
 								</div>
 								<div class="col-md-6">
-									<div class="sProducts__card"><a href="#"> 
+									<div class="card"><a href="#"> 
 											<!-- picture-->
 											<picture> 
 												<source type="image/avif" srcset="img/@2x/avif/sProducts-1.avif"/>
@@ -572,13 +572,13 @@
 												</tr>
 											</tbody>
 										</table>
-										<div class="sProducts__more">
+										<div class="card__more">
 											<p>150 400 ₽</p><a class="btn btn-primary btn-sm" href="#">Подробнее </a>
 										</div>
 									</div>
 								</div>
 								<div class="col-md-6">
-									<div class="sProducts__card"><a href="#"> 
+									<div class="card"><a href="#"> 
 											<!-- picture-->
 											<picture> 
 												<source type="image/avif" srcset="img/@2x/avif/sProducts-1.avif"/>
@@ -608,13 +608,13 @@
 												</tr>
 											</tbody>
 										</table>
-										<div class="sProducts__more">
+										<div class="card__more">
 											<p>150 400 ₽</p><a class="btn btn-primary btn-sm" href="#">Подробнее </a>
 										</div>
 									</div>
 								</div>
 								<div class="col-md-6">
-									<div class="sProducts__card"><a href="#"> 
+									<div class="card"><a href="#"> 
 											<!-- picture-->
 											<picture> 
 												<source type="image/avif" srcset="img/@2x/avif/sProducts-1.avif"/>
@@ -644,13 +644,13 @@
 												</tr>
 											</tbody>
 										</table>
-										<div class="sProducts__more">
+										<div class="card__more">
 											<p>150 400 ₽</p><a class="btn btn-primary btn-sm" href="#">Подробнее </a>
 										</div>
 									</div>
 								</div>
 								<div class="col-md-6">
-									<div class="sProducts__card"><a href="#"> 
+									<div class="card"><a href="#"> 
 											<!-- picture-->
 											<picture> 
 												<source type="image/avif" srcset="img/@2x/avif/sProducts-1.avif"/>
@@ -680,13 +680,13 @@
 												</tr>
 											</tbody>
 										</table>
-										<div class="sProducts__more">
+										<div class="card__more">
 											<p>150 400 ₽</p><a class="btn btn-primary btn-sm" href="#">Подробнее </a>
 										</div>
 									</div>
 								</div>
 								<div class="col-md-6">
-									<div class="sProducts__card"><a href="#"> 
+									<div class="card"><a href="#"> 
 											<!-- picture-->
 											<picture> 
 												<source type="image/avif" srcset="img/@2x/avif/sProducts-1.avif"/>
@@ -716,7 +716,7 @@
 												</tr>
 											</tbody>
 										</table>
-										<div class="sProducts__more">
+										<div class="card__more">
 											<p>150 400 ₽</p><a class="btn btn-primary btn-sm" href="#">Подробнее </a>
 										</div>
 									</div>
