--- a/public/03-portfolio-2.html
+++ b/public/03-portfolio-2.html
@@ -199,7 +199,9 @@
 						<svg class="icon icon-arrow-left ">
 							<use xlink:href="img/svg/sprite.svg#arrow-left"></use>
 						</svg></a>
-					<h1>Навес 4 х 8 м из сотового поликарбоната</h1>
+					<div class="page-head__wrap">
+						<h1>Навес 4 х 8 м из сотового поликарбоната</h1>
+					</div>
 				</div>
 			</div>
 			<!-- start sSpecifications-->
