--- a/public/03-portfolio.html
+++ b/public/03-portfolio.html
@@ -199,7 +199,9 @@
 						<svg class="icon icon-arrow-left ">
 							<use xlink:href="img/svg/sprite.svg#arrow-left"></use>
 						</svg></a>
-					<h1>Портфолио</h1>
+					<div class="page-head__wrap">
+						<h1>Портфолио</h1>
+					</div>
 				</div>
 			</div>
 			<div class="container">
