--- a/public/index.html
+++ b/public/index.html
@@ -719,32 +719,32 @@
 										<div class="swiper-wrapper">
 												<div class="form-wrap__slide swiper-slide">
 													<div class="form-wrap__item">
-														<input class="btn-check" type="radio" name="options" id="option1" autocomplete="off"/>
-														<label for="option1"><img src="img/svg/sCalculator-1.svg" alt=""/><span>1-скатная кровля</span></label>
+														<input class="btn-check" type="radio" name="variants" id="variant1" autocomplete="off"/>
+														<label for="variant1"><img src="img/svg/sCalculator-1.svg" alt=""/><span>1-скатная кровля</span></label>
 													</div>
 												</div>
 												<div class="form-wrap__slide swiper-slide">
 													<div class="form-wrap__item">
-														<input class="btn-check" type="radio" name="options" id="option2" autocomplete="off"/>
-														<label for="option2"><img src="img/svg/sCalculator-2.svg" alt=""/><span>2-скатная кровля</span></label>
+														<input class="btn-check" type="radio" name="variants" id="variant2" autocomplete="off"/>
+														<label for="variant2"><img src="img/svg/sCalculator-2.svg" alt=""/><span>2-скатная кровля</span></label>
 													</div>
 												</div>
 												<div class="form-wrap__slide swiper-slide">
 													<div class="form-wrap__item">
-														<input class="btn-check" type="radio" name="options" id="option3" autocomplete="off"/>
-														<label for="option3"><img src="img/svg/sCalculator-3.svg" alt=""/><span>Арочная кровля</span></label>
+														<input class="btn-check" type="radio" name="variants" id="variant3" autocomplete="off"/>
+														<label for="variant3"><img src="img/svg/sCalculator-3.svg" alt=""/><span>Арочная кровля</span></label>
 													</div>
 												</div>
 												<div class="form-wrap__slide swiper-slide">
 													<div class="form-wrap__item">
-														<input class="btn-check" type="radio" name="options" id="option4" autocomplete="off"/>
-														<label for="option4"><img src="img/svg/sCalculator-4.svg" alt=""/><span>Полуарочная кровля</span></label>
+														<input class="btn-check" type="radio" name="variants" id="variant4" autocomplete="off"/>
+														<label for="variant4"><img src="img/svg/sCalculator-4.svg" alt=""/><span>Полуарочная кровля</span></label>
 													</div>
 												</div>
 												<div class="form-wrap__slide swiper-slide">
 													<div class="form-wrap__item">
-														<input class="btn-check" type="radio" name="options" id="option5" autocomplete="off"/>
-														<label for="option5"><img src="img/svg/sCalculator-5.svg" alt=""/><span>4-скатная кровля</span></label>
+														<input class="btn-check" type="radio" name="variants" id="variant5" autocomplete="off"/>
+														<label for="variant5"><img src="img/svg/sCalculator-5.svg" alt=""/><span>4-скатная кровля</span></label>
 													</div>
 												</div>
 										</div>
