--- a/public/index.html
+++ b/public/index.html
@@ -926,6 +926,12 @@
 								</section>
 								<!-- end sSpecifications-->
 							</div>
+							<div class="col">
+								<div class="sPortfolio__btn-wrap">
+									<button class="btn btn-primary">Показать еще</button>
+									<button class="btn btn-outline-secondary">Смотреть всё портфолио</button>
+								</div>
+							</div>
 						</div>
 					</div>
 				</section>
