--- a/public/03-portfolio.html
+++ b/public/03-portfolio.html
@@ -16,25 +16,76 @@
 		<div class="main-wrapper">
 			<!-- start header-->
 			<header class="header" id="header">
-			</header>
-			<!-- end header-->
-			<!-- start top-nav-->
-			<div class="top-nav block-with-lazy">
-				<div class="container">
-					<div class="row">
-						<div class="col-auto d-lg-none">
-							<div class="toggle-menu-mobile toggle-menu-mobile--js"><span></span>
-							</div>
-						</div>
-						<div class="col-auto d-none d-lg-block">
-							<div class="services-dropdown dropdown">
-								<div class="services-dropdown__btn dropdown__btn">
-									<div class="services-dropdown__toggle-icon"><span></span>
-									</div><span>Услуги</span>
+				<!-- start top-nav-->
+				<div class="top-nav block-with-lazy">
+					<div class="container">
+						<div class="row">
+							<div class="col-auto d-lg-none">
+								<div class="toggle-menu-mobile toggle-menu-mobile--js"><span></span>
 								</div>
-								<div class="services-dropdown__content dropdown__content">
-									<div class="row">
-										<div class="col-4">
+							</div>
+							<div class="col-auto d-none d-lg-block">
+								<div class="services-dropdown dropdown">
+									<div class="services-dropdown__btn dropdown__btn">
+										<div class="services-dropdown__toggle-icon"><span></span>
+										</div><span>Услуги</span>
+									</div>
+									<div class="services-dropdown__content dropdown__content">
+										<div class="row">
+											<div class="col-4">
+												<h6>Навесы</h6>
+												<ul>
+													<li> <a href="#">Для авто</a></li>
+													<li> <a href="#">Для парковки</a></li>
+													<li> <a href="#">К&nbsp;дому</a></li>
+													<li> <a href="#">Беседка</a></li>
+													<li> <a href="#">Для дачи</a></li>
+													<li> <a href="#">Кольцо и&nbsp;козырек</a></li>
+													<li> <a href="#">Для бассейна</a></li>
+													<li> <a href="#">Ангар</a></li>
+												</ul>
+											</div>
+											<div class="col-8">
+												<h6>Производим также</h6>
+												<ul>
+													<li> <a href="#">Бетонные площадки</a></li>
+													<li> <a href="#">Заезды на&nbsp;участок</a></li>
+													<li> <a href="#">Укладка тротуарной плитки</a></li>
+													<li> <a href="#">Ворота откатные и&nbsp;распашные</a></li>
+													<li> <a href="#">Заборы и&nbsp;ограждения</a></li>
+													<li> <a href="#">Кованые изделия</a></li>
+													<li> <a href="#">Крыльцо</a></li>
+													<li> <a href="#">Лестница в&nbsp;дом</a></li>
+													<li> <a href="#">Лестница на&nbsp;улице</a></li>
+													<li> <a href="#">Ангары</a></li>
+													<li> <a href="#">Изготовление металлоконструкций</a></li>
+													<li> <a href="#">Беседки</a></li>
+												</ul>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="top-nav__col col-auto">
+								<div class="menu-mobile menu-mobile--js">
+									<div class="menu-mobile__inner">
+										<div class="top-nav__btn-wrap">
+											<a class="top-nav__btn" href="#">Вызвать замерщика
+											</a>
+										</div>
+										<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
+											<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Каталог</a></li>
+											<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Портфолио</a></li>
+											<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Дизайн</a></li>
+											<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Калькулятор</a></li>
+											<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Цены</a></li>
+											<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Отзывы</a></li>
+											<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Этапы</a></li>
+											<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Компания</a></li>
+											<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Контакты</a></li>
+											<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Блог</a></li>
+										</ul>
+										<div class="top-nav__list">
 											<h6>Навесы</h6>
 											<ul>
 												<li> <a href="#">Для авто</a></li>
@@ -47,7 +98,7 @@
 												<li> <a href="#">Ангар</a></li>
 											</ul>
 										</div>
-										<div class="col-8">
+										<div class="top-nav__list">
 											<h6>Производим также</h6>
 											<ul>
 												<li> <a href="#">Бетонные площадки</a></li>
@@ -67,133 +118,82 @@
 									</div>
 								</div>
 							</div>
-						</div>
-						<div class="top-nav__col col-auto">
-							<div class="menu-mobile menu-mobile--js">
-								<div class="menu-mobile__inner">
-									<div class="top-nav__btn-wrap">
-										<a class="top-nav__btn" href="#">Вызвать замерщика
-										</a>
-									</div>
-									<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-										<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Каталог</a></li>
-										<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Портфолио</a></li>
-										<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Дизайн</a></li>
-										<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Калькулятор</a></li>
-										<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Цены</a></li>
-										<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Отзывы</a></li>
-										<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Этапы</a></li>
-										<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Компания</a></li>
-										<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Контакты</a></li>
-										<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Блог</a></li>
-									</ul>
-									<div class="top-nav__list">
-										<h6>Навесы</h6>
-										<ul>
-											<li> <a href="#">Для авто</a></li>
-											<li> <a href="#">Для парковки</a></li>
-											<li> <a href="#">К&nbsp;дому</a></li>
-											<li> <a href="#">Беседка</a></li>
-											<li> <a href="#">Для дачи</a></li>
-											<li> <a href="#">Кольцо и&nbsp;козырек</a></li>
-											<li> <a href="#">Для бассейна</a></li>
-											<li> <a href="#">Ангар</a></li>
-										</ul>
-									</div>
-									<div class="top-nav__list">
-										<h6>Производим также</h6>
-										<ul>
-											<li> <a href="#">Бетонные площадки</a></li>
-											<li> <a href="#">Заезды на&nbsp;участок</a></li>
-											<li> <a href="#">Укладка тротуарной плитки</a></li>
-											<li> <a href="#">Ворота откатные и&nbsp;распашные</a></li>
-											<li> <a href="#">Заборы и&nbsp;ограждения</a></li>
-											<li> <a href="#">Кованые изделия</a></li>
-											<li> <a href="#">Крыльцо</a></li>
-											<li> <a href="#">Лестница в&nbsp;дом</a></li>
-											<li> <a href="#">Лестница на&nbsp;улице</a></li>
-											<li> <a href="#">Ангары</a></li>
-											<li> <a href="#">Изготовление металлоконструкций</a></li>
-											<li> <a href="#">Беседки</a></li>
-										</ul>
-									</div>
-								</div>
+							<div class="col text-end">
+								<a class="top-nav__tel" href="tel:+74952563067">+7 495 256 30 67
+								</a>
 							</div>
-						</div>
-						<div class="col text-end">
-							<a class="top-nav__tel" href="tel:+74952563067">+7 495 256 30 67
-							</a>
-						</div>
-						<div class="col-auto">
-							<div class="soc soc--header">
-								<a class="soc__item soc__item--whatsapp" href="#" target="_blank">
-									<svg class="icon icon-whatsapp ">
-										<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
-									</svg>
-								</a>
-								<a class="soc__item soc__item--phone-call" href="#" target="_blank">
-									<svg class="icon icon-phone-call ">
-										<use xlink:href="img/svg/sprite.svg#phone-call"></use>
-									</svg>
-								</a>
-								<a class="soc__item soc__item--measuring d-none d-xl-grid" href="#" target="_blank">
-									<svg class="icon icon-measuring ">
-										<use xlink:href="img/svg/sprite.svg#measuring"></use>
-									</svg>
-								</a>
+							<div class="col-auto">
+								<div class="soc soc--header">
+									<a class="soc__item soc__item--whatsapp" href="#" target="_blank">
+										<svg class="icon icon-whatsapp ">
+											<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
+										</svg>
+									</a>
+									<a class="soc__item soc__item--phone-call" href="#" target="_blank">
+										<svg class="icon icon-phone-call ">
+											<use xlink:href="img/svg/sprite.svg#phone-call"></use>
+										</svg>
+									</a>
+									<a class="soc__item soc__item--measuring d-none d-xl-grid" href="#" target="_blank">
+										<svg class="icon icon-measuring ">
+											<use xlink:href="img/svg/sprite.svg#measuring"></use>
+										</svg>
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			<!-- end top-nav-->
-			<!-- start topLine-->
-			<div class="topLine section" id="topLine">
-				<div class="container">
-					<div class="topLine__main-row row">
-						<div class="col-auto">
-							<a class="logo" href="/">
-								<svg class="icon icon-logo-top ">
-									<use xlink:href="img/svg/sprite.svg#logo-top"></use>
-								</svg>
-							</a>
-						</div>
-						<div class="col">
-							<div class="row">
-								<div class="topLine__col col-auto">
-									<div class="locaton-dropdown dropdown">
-										<div class="locaton-dropdown__btn dropdown__btn">
-											<svg class="icon icon-geo-tag ">
-												<use xlink:href="img/svg/sprite.svg#geo-tag"></use>
-											</svg><span>Москва и&nbsp;МО</span>
-											<svg class="icon icon-chevron-down ">
-												<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
-											</svg>
-										</div>
-										<div class="locaton-dropdown__content dropdown__content">
-											<a class="locaton-dropdown__item" href="#">Москва и&nbsp;МО
-											</a>
-											<a class="locaton-dropdown__item" href="#">Санкт-Петербург и&nbsp;область
-											</a>
-											<a class="locaton-dropdown__item" href="#">И так далее
-											</a>
+				<!-- end top-nav-->
+				<!-- start topLine-->
+				<div class="topLine section" id="topLine">
+					<div class="container">
+						<div class="topLine__main-row row">
+							<div class="col-auto">
+								<a class="logo" href="/">
+									<svg class="icon icon-logo-top ">
+										<use xlink:href="img/svg/sprite.svg#logo-top"></use>
+									</svg>
+								</a>
+							</div>
+							<div class="col">
+								<div class="row">
+									<div class="topLine__col col-auto">
+										<div class="locaton-dropdown dropdown">
+											<div class="locaton-dropdown__btn dropdown__btn">
+												<svg class="icon icon-geo-tag ">
+													<use xlink:href="img/svg/sprite.svg#geo-tag"></use>
+												</svg><span>Москва и&nbsp;МО</span>
+												<svg class="icon icon-chevron-down ">
+													<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
+												</svg>
+											</div>
+											<div class="locaton-dropdown__content dropdown__content">
+												<a class="locaton-dropdown__item" href="#">Москва и&nbsp;МО
+												</a>
+												<a class="locaton-dropdown__item" href="#">Санкт-Петербург и&nbsp;область
+												</a>
+												<a class="locaton-dropdown__item" href="#">И так далее
+												</a>
+											</div>
 										</div>
 									</div>
-								</div>
-								<div class="col-sm-auto">
-									<div class="schedule"><span>открыто</span><span>Пн&ndash;Вс &bull; 9:00&ndash;21:00</span>
+									<div class="col-sm-auto">
+										<div class="schedule"><span>открыто</span><span>Пн&ndash;Вс &bull; 9:00&ndash;21:00</span>
+										</div>
 									</div>
-								</div>
-								<div class="col-auto d-none d-md-flex">
-									<div class="label"> <span>Работаем с&nbsp;2012 года</span>
+									<div class="col-auto d-none d-md-flex">
+										<div class="label"> <span>Работаем с&nbsp;2012 года</span>
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			<!-- end topLine-->
+				<!-- end topLine-->
+			</header>
+			<!-- end header-->
 			<div class="page-head">
 				<div class="container"><a href="#">
 						<svg class="icon icon-arrow-left ">
@@ -954,7 +954,7 @@
 					</svg><span>Наверх</span></a>
 			</div>
 		</div>
-		<!--  start modals--><a class="link-modal-js" href="modal-call">modal-call </a>
+		<!--  start modals-->
 		<div id="modal-call" style="display: none">
 			<div class="modal-win">
 				<div class="form-wrap">
